# text_style

./: CHANGELOG.md  Cargo.toml  README.md
.builds/: archlinux-msrv.yml  archlinux.yml
.reuse/: dep5
LICENSES/: OFL-1.1.txt
examples/: bevy.rs  syntect.rs
src/: ansi_term.rs  bevy.rs  colored.rs  crossterm.rs  cursive.rs  genpdf.rs  lib.rs  syntect.rs  termion.rs
tests/: render.rs
